overflow fix

--- a/css/main.css
+++ b/css/main.css
@@ -5,16 +5,11 @@
 	font-family: "Sofia", Verdana, sans-serif;
 }
 
-html
-{
-	height: 100%;
-}
-
 body 
 {
-	height: 100%;
 	background-image: linear-gradient(rgba(255,255,255,0.5),rgba(255,255,255,0.5)), url('../images/fiestalola.jpg');
 	background-size: contain, 100%;
+	overflow: auto;
 }
 
 .bcontainer
